--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
 <h4 class="header--sub-header">Coming Soon for iPhone and Andriod</h4>
 <p><a class="link--cta" href="#"> Download Excursion (Coming soon!)</a></p>
+<p class="footer--copyright">© Excursion</p>
+
+
 </body>
 
 </html>
